--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+node_modules
 dist
 built
-node_modules
 *-lock.json
 .env
+.env.test
 desktop.ini
 .vscode
+coverage
+**/node_modules
+**/coverage
+**/dist
