--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.0.1",
     "dotenv": "^16.4.5",
