--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A API do Formulário de Diversidade é responsável por fornecer as perguntas e opções de resposta para os formulários de diversidade de funcionários internos e candidatos externos.",
   "main": "index.js",
   "scripts": {
+    "seed": "node src/seed.js",
     "dev": "nodemon",
     "start": "ts-node src/app.ts",
     "test:unit": "jest --verbose ./tests/unit/**/**/*.spec.ts --coverage",
