.env.exemple dev information

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,7 +1,7 @@
 JWT_SECRET=
-PORT=
+PORT= 3000
 
-DB_DIALECT=
-DB_DATABASE=
+DB_DIALECT=sqlite
+DB_DATABASE=db.sqlite
 
-DATABASE_URL=
+DATABASE_URL=file:./dev.db
