--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns-tz": "^3.0.1",
     "dotenv": "^16.4.5",
