--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns-tz": "^3.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
